Added search with autocompletion to admin screens except authors due to an error in authors

--- a/app/views/admin/manager.html.erb
+++ b/app/views/admin/manager.html.erb
@@ -4,6 +4,7 @@
   <fieldset>
     <legend>Manage Ads</legend>
     <br />
+    <%= render(:partial=>'search_ads')%>
     <table>
       <tr class="header">
         <td>Ad #</td>
