--- a/app/views/admin/parent_category.html.erb
+++ b/app/views/admin/parent_category.html.erb
@@ -4,6 +4,7 @@
   <fieldset>
     <legend>Manage Parent Categories</legend>
     <br />
+    <%= render(:partial=>'search_parent_categories')%>
     <table>
       <tr class="header">
         <td>#</td>
