--- a/app/views/admin/user.html.erb
+++ b/app/views/admin/user.html.erb
@@ -4,6 +4,7 @@
   <fieldset>
     <legend>Manage Users</legend>
     <br />
+    <%= render(:partial=>'search_users')%>
     <table>
       <tr class="header">
         <td>User #</td>
