--- a/app/views/admin/category.html.erb
+++ b/app/views/admin/category.html.erb
@@ -4,6 +4,7 @@
   <fieldset>
     <legend>Manage Categories</legend>
     <br />
+    <%= render(:partial=>'search_categories')%>
     <table>
       <tr class="header">
         <td>Category #</td>
